<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/large_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_event_title" />

        <EditText
            android:id="@+id/edit_event_title_adminclt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_event_location" />

        <EditText
            android:id="@+id/edit_event_location_adminclt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_event_date" />

        <Button
            android:id="@+id/edit_event_date_adminclt"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Jan 16, 2019" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_event_start_time" />

        <Button
            android:id="@+id/edit_event_start_time_adminclt"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="8:00 AM" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_event_end_time" />

        <Button
            android:id="@+id/edit_event_end_time_adminclt"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="8:30 AM" />

        <TextView
            android:id="@+id/id_clt_admin_adminclt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Id Clt"
            android:visibility="invisible"

            />
        <TextView
            android:id="@+id/id_seance_admin_adminclt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:text="Id seance" />


        <Spinner
            android:id="@+id/spinner2_adminclt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>
</ScrollView>