<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/large_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Name of task"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/edit_event_title_admin_monitor"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:inputType="text"
            android:textSize="18dp"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_event_location"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/edit_event_location_admin_monitor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="18dp"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:id="@+id/id_clt_admin_monitor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Id Clt"
            android:visibility="invisible"
            />
        <TextView
            android:id="@+id/_admin_monitor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:text="Id seance" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_event_date" />

        <Button
            android:id="@+id/edit_event_date_admin_monitor"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Jan 16, 2019" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_event_start_time" />

        <Button
            android:id="@+id/edit_event_start_time_admin_monitor"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="8:00 AM" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_event_end_time" />

        <Button
            android:id="@+id/edit_event_end_time_admin_monitor"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="8:30 AM" />

    </LinearLayout>
</ScrollView>